--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
             <hr class="intro-divider">
             <br/>
                 <p><font size="4px"> I am currently an <a href="https://www.nsfgrfp.org/" target="_blank">NSF Graduate Research Fellow</a> in the <a href="http://alexgreaney.com/" target="_blank">Computational Materials Group</a> at the University of California Riverside. My research focuses on atomistic modeling of amorphous materials. </font></p>
-                <p><font size="4px"> I received my B.S. in Applied Mathematics (emphasis in Physics) from UC Riverside in 2015. I then joined the Nanoscale & Mesoscale Energy Materials Research Group </font></p>
+                <p><font size="4px"> I received my B.S. in Applied Mathematics (emphasis in Physics) from UC Riverside in 2015. I then joined UC Riverside's Materials Science & Engineering graduate program in the Nanoscale & Mesoscale Energy Materials Research Group. After completing my M.S., I joined the Computational Materials Group to finish my Ph.D. </font></p>
                 <p><font size="4px"> After a year and a half working in a private company in Brazil, I joined <a href="http://girke.bioinformatics.ucr.edu/">Professor Thomas Girke Lab</a> at <a href="https://www.ucr.edu/">UCR</a> in 2017. My current research focuses on the development of computational <a href="http://girke.bioinformatics.ucr.edu/systemPipeR/">data analysis</a> methods for genome biology. My main interests are the development of integrated systems for NGS data analysis for R and Bioconductor open source software projects. The following gives a short summary of my career and the current projects.</font></p>
                 
              <br/>
