--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
             <hr class="intro-divider">
             <br/>
                 <p><font size="4px"> I am currently an <a href="https://www.nsfgrfp.org/" target="_blank">NSF Graduate Research Fellow</a> in the <a href="http://alexgreaney.com/" target="_blank">Computational Materials Group</a> at the University of California Riverside. My research focuses on atomistic modeling of amorphous materials. </font></p>
-                <p><font size="4px"> I received my B.S. in Applied Mathematics (emphasis in Physics) from UC Riverside in 2015. I then joined UC Riverside's Materials Science & Engineering graduate program in the Nanoscale & Mesoscale Energy Materials Research Group. After completing my M.S., I joined the Computational Materials Group to finish my Ph.D. </font></p>
+                <p><font size="4px"> I received my B.S. in Applied Mathematics (emphasis in Physics) from UC Riverside in 2015. I then joined UC Riverside's Materials Science & Engineering graduate program in the <a href="http://www.bmwong-group.com/" target="_blank">Nanoscale & Mesoscale Energy Materials Research Group</a>. After completing my M.S., I joined Peter A. Greaney's <a href="http://alexgreaney.com/" target="_blank">Computational Materials Group</a> to finish my Ph.D. </font></p>
                 <p><font size="4px"> The question I am presently most interested in is, how can we accurately and efficiently model amorphous (i.e., non-crystalline) materials?</font></p>
                 
              <br/>
