--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
                     <a class="page-scroll" href="#education">Education</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#publication">Publication</a>
+                    <a class="page-scroll" href="#publication">Publications</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a> 
