--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a class="page-scroll" href="#projects">Projects</a>
+                        <a class="page-scroll" href="#publication">Publications</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
